Fix keyboard on mobile attendance

--- a/src/pages/atd/style.module.css
+++ b/src/pages/atd/style.module.css
@@ -10,6 +10,9 @@
   width: 60px;
   text-align: center;
   font-size: 35px;
+
+  color: transparent;
+  text-shadow: 0px 0px 0px #000;
 }
 
 .buttons {
